--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemon": "1.17.4",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
     "rxjs": "^6.1.0",
     "winston": "^2.3.1"
   },
