--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "build": "./node_modules/.bin/gulp build",
     "test": "./node_modules/.bin/mocha -t 30000 dist/tests/**/*.spec.js",
     "postinstall": "npm run build",
-    "test-jest": "jest --config ./tests/jest-config.json"
+    "test-jest": "jest --config ./jest-config.json"
   },
   "repository": {
     "type": "git",
