finished setting up jest and added tests for api

--- a/jest-config.json
+++ b/jest-config.json
@@ -1,4 +1,5 @@
 {
   "verbose": true,
-  "setupTestFrameworkScriptFile": "./tests/setup.js"
+  "moduleFileExtensions": [ "ts", "tsx", "js", "jsx" ],
+  "testMatch": [  "**/tests/(*.)+(spec|test).(ts|js)?(x)"]
 }
