--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/debug": "0.0.30",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.0.35",
+    "@types/jest": "^23.3.9",
     "@types/mocha": "^5.2.0",
     "@types/mongoose": "^5.0.14",
     "@types/morgan": "^1.7.32",
     "@types/node": "^10.1.2",
     "@types/passport": "^0.4.5",
     "@types/passport-jwt": "^3.0.1",
+    "babel-cli": "^6.26.0",
     "chai": "^4.0.2",
     "chai-http": "^4.0.0",
     "gulp": "^4.0.0",
@@ -41,14 +43,17 @@
     "jest": "^23.6.0",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.4",
+    "superagent": "^4.0.0-beta.5",
+    "supertest": "^3.3.0",
+    "ts-jest": "^23.10.4",
     "typescript": "^2.3.4"
   },
   "scripts": {
-    "start": "./node_modules/.bin/nodemon dist/index.js",
+    "start": "./node_modules/.bin/nodemon index.ts",
     "build": "./node_modules/.bin/gulp build",
-    "test": "./node_modules/.bin/mocha -t 30000 dist/tests/**/*.spec.js",
+    "test-mocha": "./node_modules/.bin/mocha -t 30000 dist/tests/**/*.spec.js",
     "postinstall": "npm run build",
-    "test-jest": "jest --config ./jest-config.json"
+    "test": "jest --config ./jest-config.json"
   },
   "repository": {
     "type": "git",
