--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "dist"
   },
   "include": [
-    "src/**/*.ts"
+    "**/*.ts"
   ],
   "exclude": [
     "node_modules",
@@ -15,6 +15,7 @@
     "environment",
     "middleware",
     "routers",
-    "services"
+    "services",
+    "tests"
   ]
 }
