--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "jest": "^23.6.0",
     "mocha": "^5.2.0",
     "mocha-typescript": "^1.1.4",
+    "node-typescript": "^0.1.3",
     "superagent": "^4.0.0-beta.5",
     "supertest": "^3.3.0",
     "ts-jest": "^23.10.4",
@@ -60,7 +61,8 @@
     "build": "./node_modules/.bin/gulp build",
     "test-mocha": "./node_modules/.bin/mocha -t 30000 dist/tests/**/*.spec.js",
     "postinstall": "npm run build",
-    "test": "jest --config ./jest-config.json"
+    "test": "jest --config ./jest-config.json",
+    "compile": "./node_modules/typescript/bin/tsc --watch"
   },
   "repository": {
     "type": "git",
