--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "pretest": "npm run lint",
     "build": "npm run lint && npm test && npm compile",
     "postinstall": "npm run build",
-    "test": "jest --config ./jest-config.json && mocha -t 30000 dist/tests/**/*.spec.js",
+    "test": "jest --config ./jest-config.json && mocha -t 30000 tests/**/*.spec.js",
     "compile": "tsc",
     "watch": "tsc --watch"
   },
