--- a/package.json
+++ b/package.json
@@ -7,58 +7,44 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
-    "debug": "^3.1.0",
-    "dotenv": "^5.0.1",
-    "express": "^4.15.3",
-    "iconv-lite": "^0.4.17",
-    "jsonwebtoken": "^8.2.1",
-    "mongoose": "^5.1.2",
-    "morgan": "^1.8.2",
-    "nodemon": "1.17.4",
+    "debug": "^4.1.0",
+    "dotenv": "^6.1.0",
+    "express": "4.16.4",
+    "iconv-lite": "0.4.24",
+    "jsonwebtoken": "8.4.0",
+    "mongoose": "5.3.12",
+    "morgan": "1.9.1",
+    "nodemon": "1.18.6",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
-    "rxjs": "^6.1.0",
-    "winston": "^2.3.1"
+    "rxjs": "6.3.3",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.0.0",
-    "@types/debug": "0.0.30",
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.0.35",
-    "@types/jest": "^23.3.9",
-    "@types/mocha": "^5.2.0",
-    "@types/mongoose": "^5.0.14",
+    "@types/debug": "0.0.31",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "4.16.0",
+    "@types/jest": "23.3.9",
+    "@types/mongoose": "5.3.1",
     "@types/morgan": "^1.7.32",
-    "@types/node": "^10.12.2",
-    "@types/passport": "^0.4.5",
+    "@types/node": "10.12.8",
+    "@types/passport": "0.4.7",
     "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.6",
     "@types/typescript": "^2.0.0",
     "babel-cli": "^6.26.0",
-    "chai": "^4.0.2",
-    "chai-http": "^4.0.0",
-    "gulp": "^4.0.0",
-    "gulp-clean": "^0.4.0",
-    "gulp-typescript": "^4.0.2",
-    "gulp-watch": "^5.0.1",
-    "gulp-yaml": "^2.0.1",
-    "jest": "^23.6.0",
-    "mocha": "^5.2.0",
-    "mocha-typescript": "^1.1.4",
-    "node-typescript": "^0.1.3",
-    "superagent": "^4.0.0-beta.5",
-    "supertest": "^3.3.0",
-    "ts-jest": "^23.10.4",
+    "jest": "23.6.0",
+    "supertest": "3.3.0",
     "tslint": "^5.11.0",
-    "typescript": "^2.3.4"
+    "typescript": "^3.1.6"
   },
   "scripts": {
     "start": "nodemon dist/server.js",
-    "lint": "tslint -c tslint.json '*/**/*.{ts,tsx}'",
-    "pretest": "npm run lint",
+    "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
+    "pretest": "npm run build",
     "postinstall": "npm run build",
-    "test": "npm run lint && jest --config ./jest-config.json && mocha dist/tests/**/*.spec.js",
+    "test": "npm run lint && jest",
     "build": "tsc",
     "watch:dev": "tsc --watch"
   },
@@ -69,5 +55,8 @@
   "keywords": [],
   "author": "esfiddle <code@esfiddle.net>",
   "license": "MIT",
-  "homepage": "https://esffidle.net"
+  "homepage": "https://esfiddle.net",
+  "engines": {
+    "node": ">= 8.x"
+  }
 }
