--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@esfiddle/blockify": "1.0.4",
     "@types/debug": "0.0.31",
     "@types/dotenv": "^6.1.0",
     "@types/express": "4.16.0",
