--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "4.16.0",
     "@types/jest": "23.3.9",
+    "@types/mongodb": "^3.1.14",
     "@types/mongoose": "5.3.1",
     "@types/morgan": "^1.7.32",
     "@types/node": "10.12.8",
