--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
 		"rootDir": "./src",
 		"outDir": "./dist",
 		"strict": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
