--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,6 @@
 		"declaration": true,
 		"rootDir": "./src",
 		"outDir": "./dist",
-		"strict": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+		"strict": true
   }
 }
