--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ APPLICATION_SECRET=secret
 PORT=8081
 MONGO_URI='mongodb://localhost:27017'
 MONGO_LIVE_DB='fiddles'
-MONGO_TEST_DB='test_fiddles'
+MONGO_TEST_DB='testFiddles'
