--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@esfiddle/api",
   "version": "1.0.0",
   "description": "The ESFiddle API",
-  "main": "index.js",
+  "main": "./dist/server.js",
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
