--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "1.9.1",
     "nodemon": "1.18.6",
     "passport": "^0.4.0",
+    "passport-github-token": "2.1.0",
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "rxjs": "6.3.3",
@@ -47,7 +48,7 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "pretest": "npm run build",
     "postinstall": "npm run build",
-    "test": "npm run lint && jest",
+    "test": "npm run lint && jest --coverage=lcov",
     "build": "tsc",
     "watch:dev": "tsc --watch"
   },
