--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ PORT=8081
 MONGO_URI='mongodb://localhost:27017'
 MONGO_LIVE_DB='fiddles'
 MONGO_TEST_DB='testFiddles'
+GITHUB_CLIENT_ID=''
+GITHUB_CLIENT_SECRET=''
