--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dotenv": "^6.1.0",
     "express": "4.16.4",
     "iconv-lite": "0.4.24",
-    "jsonwebtoken": "8.4.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "5.3.13",
     "morgan": "1.9.1",
     "nodemon": "1.18.6",
@@ -28,6 +28,7 @@
     "@types/dotenv": "^6.1.0",
     "@types/express": "4.16.0",
     "@types/jest": "23.3.9",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/mongodb": "^3.1.14",
     "@types/mongoose": "5.3.1",
     "@types/morgan": "^1.7.32",
