--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "4.16.4",
+    "helmet": "^3.15.0",
     "iconv-lite": "0.4.24",
     "jsonwebtoken": "8.4.0",
     "mongoose": "5.3.16",
