--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./dist/server.js",
   "private": true,
   "dependencies": {
+    "@types/helmet": "^0.0.42",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.2",
     "debug": "^4.1.0",
@@ -20,7 +21,7 @@
     "passport-jwt": "^4.0.0",
     "path": "^0.12.7",
     "rxjs": "6.3.3",
-    "swagger-ui-express": "^4.0.1",
+    "swagger-ui-express": "^4.0.2",
     "winston": "^3.1.0"
   },
   "devDependencies": {
