--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "./dist/server.js",
   "private": true,
   "dependencies": {
+    "@types/body-parser": "^1.17.0",
     "@types/helmet": "^0.0.42",
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.17.2",
+    "body-parser": "^1.19.0",
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "4.17.1",
