--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.idea
 node_modules
 logs
 dist
@@ -6,4 +5,10 @@ dist
 application.log
 npm-debug.log
 yarn-error.log
+
+# IDE folders
 .vscode
+.idea
+
+# coverage stuff
+.nyc_output
