--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/debug": "4.1.0",
     "@types/dotenv": "^6.1.0",
     "@types/express": "4.17.0",
-    "@types/jest": "24.0.15",
+    "@types/mocha": "^5.2.7",
     "@types/mongodb": "^3.1.14",
     "@types/mongoose": "5.5.6",
     "@types/morgan": "^1.7.32",
@@ -40,7 +41,10 @@
     "@types/swagger-ui-express": "^3.0.0",
     "@types/typescript": "^2.0.0",
     "babel-cli": "^6.26.0",
-    "jest": "23.6.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
+    "nyc": "^14.1.1",
+    "rimraf": "^2.6.3",
     "supertest": "3.4.0",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
@@ -50,8 +54,9 @@
     "lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
     "pretest": "npm run build",
     "postinstall": "npm run build",
-    "test": "npm run lint && jest",
-    "build": "tsc",
+    "test": "npm run lint && mocha \"dist/**/test/**/*.js\"",
+    "build": "npm run clean && tsc",
+    "clean": "rimraf dist",
     "watch:dev": "tsc --watch"
   },
   "repository": {
