--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "debug": "^4.1.0",
     "dotenv": "^6.1.0",
     "express": "4.17.1",
-    "helmet": "^3.15.0",
+    "helmet": "^3.21.1",
     "iconv-lite": "0.5.0",
     "jsonwebtoken": "8.4.0",
     "mongoose": "5.5.13",
@@ -42,6 +42,7 @@
     "@types/typescript": "^2.0.0",
     "babel-cli": "^6.26.0",
     "chai": "^4.2.0",
+    "codecov": "^3.6.1",
     "mocha": "^6.1.4",
     "nyc": "^14.1.1",
     "rimraf": "^2.6.3",
@@ -55,6 +56,7 @@
     "pretest": "npm run build",
     "postinstall": "npm run build",
     "test": "npm run lint && mocha \"dist/**/test/**/*.js\"",
+    "coverage": "nyc --reporter=lcov npm run test",
     "build": "npm run clean && tsc",
     "clean": "rimraf dist",
     "watch:dev": "tsc --watch"
